--- a/Kitchen/interactive_key_unlock.html
+++ b/Kitchen/interactive_key_unlock.html
@@ -1,101 +1,74 @@
 
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<title>Unlock the Secret</title>
-<style>
-  body {
-    background-color: #0f0f0f;
-    color: #fff;
-    font-family: Georgia, serif;
-    text-align: center;
-    padding: 20px;
-  }
-  h1 {
-    font-weight: normal;
-  }
-  .container {
-    position: relative;
-    width: 80%;
-    margin: 0 auto;
-    max-width: 900px;
-  }
-  .lockbox {
-    margin: 40px auto;
-    width: 300px;
-    position: relative;
-  }
-  .lockbox img {
-    width: 100%;
-  }
-  .keys {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  }
-  .keys img {
-    width: 100px;
-    cursor: grab;
-  }
-  .dropzone {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    width: 60px;
-    height: 60px;
-    transform: translate(-50%, -50%);
-  }
-  #message {
-    margin-top: 20px;
-    font-size: 1.2em;
-    display: none;
-  }
-  a.button {
-    display: inline-block;
-    margin-top: 15px;
-    padding: 10px 20px;
-    background: #d1a245;
-    color: #000;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 4px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Key Unlock</title>
+  <style>
+    body {
+      background-color: #f5f5f5;
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    h1 {
+      margin-top: 40px;
+    }
+    .key-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin: 30px 10px;
+      max-width: 90%;
+    }
+    .key-container img {
+      width: 100px;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .key-container img:hover {
+      transform: scale(1.1);
+    }
+    #reward {
+      display: none;
+      margin-top: 30px;
+    }
+    @media screen and (max-width: 600px) {
+      .key-container img {
+        width: 80px;
+      }
+    }
+  </style>
 </head>
 <body>
-<h1>Which key unlocks the truth?</h1>
-<div class="container">
-<div class="lockbox">
-<img alt="Lock box" src="jewellery box.png"/>
-<div class="dropzone" id="dropzone"></div>
-</div>
-
-<div id="message">
-      You’ve found the key. The loop awaits.<br/>
-<a class="button" href="https://thepurplefinch.com/the-loop" target="_blank">Enter the Loop</a>
-</div><div class="keys"><img draggable="true" id="key1" ondragstart="drag(event)" src="key1.png"/><img draggable="true" id="key2" ondragstart="drag(event)" src="key2.png"/><img draggable="true" id="key5" ondragstart="drag(event)" src="key5-correct.png"/><img draggable="true" id="key3" ondragstart="drag(event)" src="key3.png"/><img draggable="true" id="key4" ondragstart="drag(event)" src="key4.png"/></div>
-</div>
-<script>
-function allowDrop(ev) {
-  ev.preventDefault();
-}
-function drag(ev) {
-  ev.dataTransfer.setData("text", ev.target.id);
-}
-function drop(ev) {
-  ev.preventDefault();
-  var data = ev.dataTransfer.getData("text");
-  if (data === "key5-correct") {
-    document.getElementById("message").style.display = "block";
-  } else {
-    alert("That’s not the right key. Try again.");
-  }
-}
-document.getElementById("dropzone").addEventListener("dragover", allowDrop);
-document.getElementById("dropzone").addEventListener("drop", drop);
-</script>
+  <h1>Choose the correct key to unlock the loop</h1>
+  <div class="key-container">
+    <img src="key1.png" alt="Key 1" onclick="checkKey(false)">
+    <img src="key2.png" alt="Key 2" onclick="checkKey(false)">
+    <img src="key5-correct.png" alt="Key 5" onclick="checkKey(true)">
+    <img src="key3.png" alt="Key 3" onclick="checkKey(false)">
+    <img src="key4.png" alt="Key 4" onclick="checkKey(false)">
+  </div>
+  <div id="reward">
+    <a href="https://thepurplefinch.com/the-loop" target="_blank">
+      <button style="font-size: 1.2rem; padding: 10px 20px;">Reveal the Secret</button>
+    </a>
+  </div>
+  <script>
+    function checkKey(correct) {
+      if (correct) {
+        document.getElementById('reward').style.display = 'block';
+        window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
+      } else {
+        alert('Try again.');
+      }
+    }
+  </script>
 </body>
 </html>
