--- a/Password Box/lock_password_visible_input.html
+++ b/Password Box/lock_password_visible_input.html
@@ -56,7 +56,7 @@
       if (e.key === 'Enter') {
         const val = input.value.trim().toLowerCase();
         if (val === 'lookup') {
-          window.location.href = 'https://thepurplefinch.com/the-loop';
+          window.top.location.href = 'https://thepurplefinch.com/the-loop';
         } else {
           input.value = '';
           input.placeholder = 'Try again';
